playbook/1-monitor-api-performance/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dummy-api
  name: dummy-api
  namespace: default
spec:
  selector:
    app: dummy-api
  ports:
    - protocol: TCP
      port: 10000
      targetPort: dummy-api
