playbook/1-monitor-api-performance/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: dummy-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: dummy-api
  namespace: default
spec:
  rules:
    - host: dummy-api.ishakantony.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-api
                port:
                  number: 10000
